--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -189,6 +189,14 @@ config ZIIRAVE_WATCHDOG
 	  To compile this driver as a module, choose M here: the
 	  module will be called ziirave_wdt.
 
+config ZII_PIC_WATCHDOG
+	bool "ZII PIC Watchdog timer"
+	depends on MFD_ZII_PIC
+	select WATCHDOG_CORE
+	help
+	  Support for the watchdog on Zodiac Inflight Infotainment
+	  PIC controller.
+
 # ALPHA Architecture
 
 # ARM Architecture
