ZII PIC Power button driver
Signed-off-by: Andrey Vostrikov <andrey.vostrikov@cogentembedded.com>

Conflicts:
	drivers/input/misc/Kconfig

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -819,4 +819,12 @@ config INPUT_HISI_POWERKEY
 	  To compile this driver as a module, choose M here: the
 	  module will be called hisi_powerkey.
 
+config INPUT_ZII_PIC_PWRBUTTON
+	bool "ZII PIC Power button Driver"
+	depends on MFD_ZII_PIC
+	help
+	  Say Y here if you want to enable power key reporting from ZII PIC MCU
+
+	  If unsure, say N
+
 endif
