--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -208,4 +208,4 @@ obj-$(CONFIG_MFD_MT6397)	+= mt6397-core.o
 
 obj-$(CONFIG_MFD_ALTERA_A10SR)	+= altera-a10sr.o
 
-obj-$(CONFIG_MFD_ZII_PIC)	+= zii-pic.o zii-pic-niu.o zii-pic-mezz.o zii-pic-esb.o zii-pic-rdu.o
+obj-$(CONFIG_MFD_ZII_PIC)	+= zii-pic.o zii-pic-niu.o zii-pic-mezz.o zii-pic-esb.o zii-pic-rdu.o zii-pic-rdu2.o
