Add PIC bootloader commands and INTEL HEX format parser
Signed-off-by: Andrey Vostrikov <andrey.vostrikov@cogentembedded.com>

Conflicts:
	lib/Kconfig
	lib/Makefile

Minor fix in includes to get lib/intel-hex.c compile against 4.8-rc6

Signed-off-by: Nikita Yushchenko <nikita.yoush@cogentembedded.com>

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -550,4 +550,10 @@ config STACKDEPOT
 	bool
 	select STACKTRACE
 
+config INTEL_HEX
+	def_bool n
+	help
+	  Provides a helper to parse INTEL HEX formatted strings used to store
+	  firmware images
+
 endmenu
