arm: imx6q-zii-rdu2.dts: add PIC and it's subdevices
Signed-off-by: Nikita Yushchenko <nikita.yoush@cogentembedded.com>

--- a/arch/arm/boot/dts/imx6q-zii-rdu2.dts
+++ b/arch/arm/boot/dts/imx6q-zii-rdu2.dts
@@ -272,6 +272,79 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
 	status = "okay";
+	pic {
+		compatible = "zii,pic-rdu2";
+		current-speed = <1000000>;
+		status = "okay";
+
+		main_eeprom {
+			compatible = "zii,pic-main-eeprom";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			status = "okay";
+
+			eeprom_format: eeprom-format@0 {
+				reg = <0x00 2>;
+			};
+			wdt_timeout: wdt-timeout@81 {
+				reg = <0x81 2>;
+			};
+			boot_source: boot-source@83 {
+				reg = <0x83 1>;
+			};
+			wdt_rmi: wdt-rmi@84 {
+				reg = <0x84 2>;
+			};
+			max_failed_boots: max-failed-boots@8E {
+				reg = <0x8E 2>;
+			};
+		};
+
+		dds_eeprom {
+			compatible = "zii,pic-dds-eeprom";
+			#address-cells = <1>;
+			#size-cells = <1>;
+			status = "okay";
+		};
+
+		watchdog {
+			compatible = "zii,pic-watchdog";
+                        nvmem-cells = <&wdt_rmi
+                                        &wdt_timeout>;
+
+                        nvmem-cell-names = "wdt_rmi",
+                                        "wdt_timeout";
+			status = "okay";
+		};
+
+		hwmon {
+			compatible = "zii,pic-hwmon";
+			sensors = "RMB_3V3_PMIC",
+				  "RMB_3V3_MCU",
+				  "RMB_5V_MAIN",
+				  "RMB_12V_MAIN",
+				  "RMB_28V_FIL",
+				  "RMB_28V_HOTSWAP",
+				  "DEB_1V8",
+				  "DEB_3V3",
+				  "DEB_28V_DEB",
+				  "DEB_28V_RDU",
+				  "TEMPERATURE",
+				  "TEMPERATURE_2",
+				  "RMB_28V_CURRENT";
+			status = "okay";
+		};
+
+		pwrbutton {
+			compatible = "zii,pic-pwrbutton";
+			status = "okay";
+		};
+
+		backlight {
+			compatible = "zii,pic-backlight";
+			status = "okay";
+		};
+	};
 };
 
 &ecspi1 {
