zii-pic: make it possible to build subdrivers as modules
Export needed symbols, update Kconfig's.

Signed-off-by: Nikita Yushchenko <nikita.yoush@cogentembedded.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1824,7 +1824,7 @@ config SENSORS_ULTRA45
 	  sensors.
 
 config SENSORS_ZII_PIC
-	bool "ZII PIC sensors"
+	tristate "ZII PIC sensors"
 	depends on MFD_ZII_PIC
 	help
 	  This driver provides support for the Zodiac Inflight Infotainment PIC
