--- a/drivers/nvmem/Kconfig
+++ b/drivers/nvmem/Kconfig
@@ -102,7 +102,7 @@ config NVMEM_VF610_OCOTP
 	  be called nvmem-vf610-ocotp.
 
 config ZII_PIC_EEPROM
-	bool "ZII PIC EEPROM Support"
+	tristate "ZII PIC EEPROM Support"
 	depends on MFD_ZII_PIC
 	select REGMAP
 	help
