--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -820,7 +820,7 @@ config INPUT_HISI_POWERKEY
 	  module will be called hisi_powerkey.
 
 config INPUT_ZII_PIC_PWRBUTTON
-	bool "ZII PIC Power button Driver"
+	tristate "ZII PIC Power button Driver"
 	depends on MFD_ZII_PIC
 	help
 	  Say Y here if you want to enable power key reporting from ZII PIC MCU
