--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -631,6 +631,13 @@ config LEDS_VERSATILE
 	  This option enabled support for the LEDs on the ARM Versatile
 	  and RealView boards. Say Y to enabled these.
 
+config LEDS_ZII_PIC
+	tristate "LED support for LEDs connected to PIC on ZII platform"
+	depends on LEDS_CLASS && MFD_ZII_PIC
+	help
+	  This option enables support for LEDs connected to Zodiac
+	  Inflight Infotainment PIC controller.
+
 comment "LED Triggers"
 source "drivers/leds/trigger/Kconfig"
 
